<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingEnd="@dimen/userPage15dp"
    android:paddingStart="@dimen/userPage15dp"
    android:paddingTop="@dimen/_20dp">

    <TextView
        android:id="@+id/tvDynamicsDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textColor="@color/color_272B3C"
        android:textSize="@dimen/commonFontSize_13"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tvDynamicsDate"
        android:layout_marginTop="@dimen/_9dp"
        android:textColor="@color/color_9B9FAD"
        android:textSize="@dimen/commonFontSize_12" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDynamicsDate"
        android:layout_marginStart="@dimen/userPage10dp"
        android:layout_marginTop="@dimen/_9dp"
        android:layout_toEndOf="@id/tvAction"
        android:textColor="@color/color_9B9FAD"
        android:textSize="@dimen/commonFontSize_12" />

    <ImageView
        android:id="@+id/ivOperation"
        android:layout_width="@dimen/_20dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/operation"
        android:src="@mipmap/mine_omitted" />

    <RelativeLayout
        android:id="@+id/rlCustomView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAction"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/bg"
            android:src="@mipmap/user_bs_ticker_bg" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivMasterHead"
                android:layout_width="@dimen/CommonHead_size"
                android:layout_height="@dimen/CommonHead_size"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/head"
                 />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--拜师卷-->
                <TextView
                    android:id="@+id/tvBaishiCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/commonFontSize_15"
                    android:textStyle="bold" />

                <!--拜"xxx"为师-->
                <TextView
                    android:id="@+id/tvBaishiAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/commonFontSize_12" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:id="@+id/vDivider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/defaultDividerHeight"
        android:layout_below="@id/rlCustomView"
        android:layout_marginTop="@dimen/_20dp"
        android:background="@color/f2f2f2" />
</RelativeLayout>
